--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
-  <div class="pre-title animate__animated animate__fadeInUp animation-1">Hola mi nombre es</div>
+  <div class="pre-title animate__animated animate__fadeInUp animation-1"> {{ 'sidebar.preTitle' | translate }} </div>
   <h1 #asTitle class="title animate__animated animate__fadeInUp animation-2"></h1>
-  <h2 class="sub-title animate__animated animate__fadeInUp animation-3">Soy desarrollador Web</h2>
-  <p class="description animate__animated animate__fadeInUp animation-4">Me apasionan las tecnologías web, me encantan los proyectos retadores y el trabajo en equipo, tengo conocimiento en: Angular, JS, HTML5, CSS3, SCSS, NGRX</p>
+  <h2 class="sub-title animate__animated animate__fadeInUp animation-3">{{ 'sidebar.rol' | translate }}</h2>
+  <p class="description animate__animated animate__fadeInUp animation-4">{{ 'sidebar.description' | translate }}</p>
 
   <div class="link-wrapper">
     <hr>
